refactor: replace Jackson with org.json and optimize WebSocket WebUI initial loading payload